syntax = "proto3";

option go_package = "Sisconn-raft/raft/raftpc";

import "raft.proto";

// package raftpc.proto;

service RaftService {
    rpc Ping (PingRequest) returns (MessageResponse);
    rpc Get (KeyedRequest) returns (ValueResponse);
    rpc Set (KeyValuedRequest) returns (MessageResponse);
    rpc Strln (KeyedRequest) returns (ValueResponse);
    rpc Del (KeyedRequest) returns (ValueResponse);
    rpc Append (KeyValuedRequest) returns (MessageResponse);
    rpc Commit (CommitRequest) returns (MessageResponse);

    rpc ReqLog (LogRequest) returns (LogResponse);

    rpc AddNode (KeyValuedRequest) returns (MessageResponse);
    rpc RemoveNode (KeyedRequest) returns (MessageResponse);
}

message PingRequest {
    // none, for now; in case ping can accept parameter in the future
}

message KeyValuedRequest {
    string key = 1;
    string value = 2;
}

message MessageResponse {
    string response = 1;
}

message KeyedRequest {
    string key = 1;
}

message ValueResponse {
    string value = 1;
}

message LogRequest {
    // none, for now; in case request log uses parameter in the future
}

message LogResponse {
    repeated LogEntry logEntries = 1;
}

message CommitEntry {
    string type = 1;
    string key = 2;
    string value = 3;
}

message CommitRequest {
    repeated CommitEntry commitEntries = 1;
}