syntax = "proto3";

option go_package = "Sisconn-raft/raft/transport";

package transport;

service Raft {
    rpc AppendEntries (AppendEntriesArg) returns (AppendResult);
    rpc RequestVote (RequestVoteArg) returns (VoteResult);
}

message AppendEntriesArg {
    uint64 term = 1;
    uint64 leaderId = 2;
    uint64 prevLogIndex = 3;

    uint64 prevLogTerm = 4;
    repeated LogEntry logEntries = 5;

    uint64 leaderCommit = 6;
}

message LogEntry {
    uint64 term = 1;
    string key = 2;
    string value = 3;
}

message AppendResult {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteArg {
    uint64 term = 1;
    uint64 candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message VoteResult {
    uint64 term = 1;
    bool voteGranted = 2;
}